bk_ida/gobmkida/g1/make_worms
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:819:25: error: use of undeclared identifier 'libs_1'
v25 = findlib( ii, 241, libs_1); 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:829:7: error: use of undeclared identifier 'libs_1'
v22 = libs_1[v21]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:880:14: error: use of undeclared identifier 'byte_A07ABF'
|| ( ( v32 = byte_A07ABF[kk], v32 == 3) || v35 == v32) 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:1041:26: error: use of undeclared identifier 'byte_A07ABF'
if ( ( unsigned __int8)( byte_A07ABF[i3] - 1) <= 1u 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:1136:25: error: use of undeclared identifier 'libs_0'
v78 = findlib( i4, 241, libs_0); 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:1143:7: error: use of undeclared identifier 'libs_0'
v84 = libs_0[i5]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/engine/worm.c:1157:7: error: use of undeclared identifier 'libs_0'
v82 = libs_0[i5] + *v81; 
      ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/make_worms/src/obj/1/worm.o] Error 1
